recursion.cons.min.Min.scala.error
Compilation error:
Min:7: error: ')' expected but $XMLSTART$< found.
      if (m <l.head)
            ^Min:11: error: illegal start of simple expression
  }
  ^